Provisioning/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "components_AppInsight_name": {
            "defaultValue": "AppInsight",
            "type": "String"
        },
        "availabilitySets_Demoset_name": {
            "defaultValue": "Demoset",
            "type": "String"
        },
        "virtualMachines_WinServer_01_name": {
            "defaultValue": "WinServer-01",
            "type": "String"
        },
        "publicIPAddresses_TFSMachine_name": {
            "defaultValue": "TFSMachine",
            "type": "String"
        },
        "networkInterfaces_winserver_01287_name": {
            "defaultValue": "winserver-01287",
            "type": "String"
        },
        "virtualNetworks_TFSResourcegroup_vnet_name": {
            "defaultValue": "TFSResourcegroup-vnet",
            "type": "String"
        },
        "networkSecurityGroups_WinServer_01_nsg_name": {
            "defaultValue": "WinServer-01-nsg",
            "type": "String"
        },
        "storageAccounts_tfsresourcegroupdiag351_name": {
            "defaultValue": "tfsresourcegroupdiag351",
            "type": "String"
        },
        "alertrules_Failure_Anomalies___AppInsight_name": {
            "defaultValue": "Failure Anomalies - AppInsight",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_TFSFTP_name": {
            "defaultValue": "TFSFTP",
            "type": "String"
        },
        "disks_WinServer_01_OsDisk_1_825357e64f5343b9aa91eee4106079c7_name": {
            "defaultValue": "WinServer-01_OsDisk_1_825357e64f5343b9aa91eee4106079c7",
            "type": "String"
        },
        "securityRules_WINRMHTTP_name": {
            "defaultValue": "WINRMHTTP",
            "type": "String"
        },
        "securityRules_WINRMHTTPS_name": {
            "defaultValue": "WINRMHTTPS",
            "type": "String"
        },
        "securityRules_default_allow_rdp_name": {
            "defaultValue": "default-allow-rdp",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Compute/availabilitySets/Demoset'.",
            "type": "Microsoft.Compute/availabilitySets",
            "sku": {
                "name": "Aligned"
            },
            "name": "[parameters('availabilitySets_Demoset_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines": [
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_WinServer_01_name'))]"
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_WinServer_01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Compute/disks/WinServer-01_OsDisk_1_825357e64f5343b9aa91eee4106079c7'.",
            "type": "Microsoft.Compute/disks",
            "name": "[parameters('disks_WinServer_01_OsDisk_1_825357e64f5343b9aa91eee4106079c7_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "accountType": "Premium_LRS",
                "osType": "Windows",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/Providers/Microsoft.Compute/Locations/southeastasia/Publishers/MicrosoftWindowsServer/ArtifactTypes/VMImage/Offers/WindowsServer/Skus/2012-R2-Datacenter/Versions/latest"
                    }
                },
                "diskSizeGB": 128
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Compute/virtualMachines/WinServer-01'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_WinServer_01_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_Demoset_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_WinServer_01_name'),'_OsDisk_1_825357e64f5343b9aa91eee4106079c7')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', parameters('disks_WinServer_01_OsDisk_1_825357e64f5343b9aa91eee4106079c7_name'))]"
                        },
                        "diskSizeGB": 128
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_WinServer_01_name')]",
                    "adminUsername": "spathak",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_winserver_01287_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_tfsresourcegroupdiag351_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_Demoset_name'))]",
                "[resourceId('Microsoft.Compute/disks', parameters('disks_WinServer_01_OsDisk_1_825357e64f5343b9aa91eee4106079c7_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_winserver_01287_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_tfsresourcegroupdiag351_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/microsoft.insights/alertrules/Failure Anomalies - AppInsight'.",
            "type": "microsoft.insights/alertrules",
            "name": "[parameters('alertrules_Failure_Anomalies___AppInsight_name')]",
            "apiVersion": "2014-04-01",
            "location": "East US",
            "tags": {
                "hidden-link:/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourcegroups/TFSResourcegroup/providers/microsoft.insights/components/AppInsight": "Resource"
            },
            "scale": null,
            "properties": {
                "name": "[parameters('alertrules_Failure_Anomalies___AppInsight_name')]",
                "description": "",
                "isEnabled": true,
                "condition": {
                    "odata.type": "Microsoft.Azure.Management.Insights.Models.ThresholdRuleCondition",
                    "dataSource": {
                        "odata.type": "Microsoft.Azure.Management.Insights.Models.RuleMetricDataSource",
                        "resourceUri": "[resourceId('microsoft.insights/components', parameters('components_AppInsight_name'))]",
                        "metricNamespace": null,
                        "metricName": "advanced::A3108E3D-5E26-44CF-B232-783F5E20EF10::ewAiAEgAeQBwAGUAcgBpAG8AbgBBAHAAcABsAGkAYwBhAHQAaQBvAG4AUwBpAGQAIgA6AG4AdQBsAGwALAAiAEgAeQBwAGUAcgBpAG8AbgBTAHUAYgBqAGUAYwB0AFMAaQBkACIAOgBuAHUAbABsACwAIgBIAHkAcABlAHIAaQBvAG4ATwBiAHMAZQByAHYAZQByAFMAaQBkACIAOgBuAHUAbABsACwAIgBDAHUAcwB0AG8AbQBlAHIAQQBjAGMAbwB1AG4AdABJAGQAIgA6ACIAMAAwADAAMAAwADAAMAAwAC0AMAAwADAAMAAtADAAMAAwADAALQAwADAAMAAwAC0AMAAwADAAMAAwADAAMAAwADAAMAAwADAAIgAsACIAQQBwAHAAbABpAGMAYQB0AGkAbwBuA [...]
                    },
                    "operator": "GreaterThan",
                    "threshold": 2,
                    "windowSize": "PT1H"
                },
                "action": {
                    "odata.type": "Microsoft.Azure.Management.Insights.Models.RuleEmailAction",
                    "sendToServiceOwners": true,
                    "customEmails": []
                }
            },
            "dependsOn": [
                "[resourceId('microsoft.insights/components', parameters('components_AppInsight_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/microsoft.insights/components/AppInsight'.",
            "type": "microsoft.insights/components",
            "kind": "web",
            "name": "[parameters('components_AppInsight_name')]",
            "apiVersion": "2014-04-01",
            "location": "eastus",
            "tags": {},
            "scale": null,
            "properties": {
                "ApplicationId": "[parameters('components_AppInsight_name')]"
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/networkInterfaces/winserver-01287'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_winserver_01287_name')]",
            "apiVersion": "2017-06-01",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9aa5a82c-2f2f-477d-a820-78f93440beee",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"64478273-3f2d-452c-9081-6749bb90043c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TFSMachine_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TFSResourcegroup_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "wg4xs3imy2muvaa2kfhog2uhda.ix.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-A0-F4-5B",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinServer_01_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_WinServer_01_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TFSMachine_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TFSResourcegroup_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinServer_01_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_WinServer_01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/networkSecurityGroups/WinServer-01-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_WinServer_01_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8dac7f19-9407-449b-b49d-408b4a3caa39",
                "securityRules": [
                    {
                        "name": "TFSFTP",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "21",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "WINRMHTTPS",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2010,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "WINRMHTTP",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2020,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"8bc207ca-075b-4d57-8d02-354f6564f789\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/publicIPAddresses/TFSMachine'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_TFSMachine_name')]",
            "apiVersion": "2017-06-01",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "093a0180-288c-4b5b-b72b-be920b114caa",
                "ipAddress": "52.187.171.20",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "devopsdemomusicstore",
                    "fqdn": "devopsdemomusicstore.southeastasia.cloudapp.azure.com"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/virtualNetworks/TFSResourcegroup-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_TFSResourcegroup_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "southeastasia",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "7579bdb1-c70c-4a19-801c-514ee3728718",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"c6d40e62-5aa0-4a68-a9f2-7d987c4f2bcf\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/tfsresourcegroup/providers/Microsoft.Storage/storageAccounts/tfsresourcegroupdiag351'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_tfsresourcegroupdiag351_name')]",
            "apiVersion": "2016-01-01",
            "location": "southeastasia",
            "tags": {},
            "scale": null,
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/networkSecurityGroups/WinServer-01-nsg/securityRules/TFSFTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_WinServer_01_nsg_name'), '/', parameters('securityRules_TFSFTP_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "21",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 2000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinServer_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/networkSecurityGroups/WinServer-01-nsg/securityRules/default-allow-rdp'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_WinServer_01_nsg_name'), '/', parameters('securityRules_default_allow_rdp_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinServer_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/networkSecurityGroups/WinServer-01-nsg/securityRules/WINRMHTTPS'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_WinServer_01_nsg_name'), '/', parameters('securityRules_WINRMHTTPS_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 2010,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinServer_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/networkSecurityGroups/WinServer-01-nsg/securityRules/WINRMHTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_WinServer_01_nsg_name'), '/', parameters('securityRules_WINRMHTTP_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 2020,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinServer_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c68a638b-8127-4649-a02e-f8a347c3a417/resourceGroups/TFSResourcegroup/providers/Microsoft.Network/virtualNetworks/TFSResourcegroup-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_TFSResourcegroup_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_TFSResourcegroup_vnet_name'))]"
            ]
        }
    ]
}
